added news and event section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               clifford: "#da373d",
             },
             fontFamily: {
-              manrope: [ "Manrope", "sans-serif"]
+              manrope: ["Manrope", "sans-serif"],
             },
           },
         },
@@ -266,6 +266,44 @@
           </div>
         </div>
       </section>
+
+      <!-- news and event section -->
+      <section class="my-14">
+        <!-- news text -->
+        <div class="text-center">
+          <h1 class="text-5xl font-bold mb-4">News & Events</h1>
+          <p class="text-gray-500">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- card section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-16">
+          <div class="border-2 border-gray-300 p-4 rounded-md space-y-4">
+            <img src="./images/news-1.png" alt="">
+            <p class="text-gray-500">Feb 05, 2027</p>
+            <h1 class="font-extrabold text-lg">Collecting 8 points for <br> discount</h1>
+            <p class="text-gray-500">There are many variations of passages <br> of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+          </div>
+          <div class="border-2 border-gray-300 p-4 rounded-md space-y-4">
+            <img src="./images/news-2.png" alt="">
+            <p class="text-gray-500">Feb 05, 2027</p>
+            <h1 class="font-extrabold text-lg">Collecting 8 points for <br> discount</h1>
+            <p class="text-gray-500">There are many variations of passages <br> of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+          </div>
+          <div class="border-2 border-gray-300 p-4 rounded-md space-y-4">
+            <img src="./images/news-3.png" alt="">
+            <p class="text-gray-500">Feb 05, 2027</p>
+            <h1 class="font-extrabold text-lg">Collecting 8 points for <br> discount</h1>
+            <p class="text-gray-500">There are many variations of passages <br> of Lorem Ipsum available.</p>
+            <h1 class="font-bold">Learn More</h1>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- fotter section -->
     <footer class="bg-orange-100 text-gray-700 py-10 px-4">
@@ -317,17 +355,24 @@
             <ul class="space-y-2">
               <li class="hover:text-orange-600"><a href="#">Home</a></li>
               <li class="hover:text-orange-600"><a href="#">About Us</a></li>
-              
             </ul>
           </div>
 
           <!-- column-4 -->
-           <div>
-            <h3 class="font-semibold text-lg mb-6">Subscribe to our newsletter</h3>
+          <div>
+            <h3 class="font-semibold text-lg mb-6">
+              Subscribe to our newsletter
+            </h3>
             <div class="flex flex-col space-y-2">
               <div>
-                <input class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6" placeholder="Email address" type="text">
-                <i class="fa-solid fa-circle-chevron-right text-orange-600 h-7 w-7"></i>
+                <input
+                  class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6"
+                  placeholder="Email address"
+                  type="text"
+                />
+                <i
+                  class="fa-solid fa-circle-chevron-right text-orange-600 h-7 w-7"
+                ></i>
               </div>
               <div class="flex justify-between w-2/5 my-8">
                 <i class="fa-brands fa-facebook"></i>
@@ -335,11 +380,12 @@
                 <i class="fa-brands fa-square-twitter"></i>
               </div>
             </div>
-           </div>
-
+          </div>
         </div>
         <div class="text-center pt-4 mt-4">
-          <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+          <p class="text-sm text-gray-600">
+            © 2027 UIDesign.to - All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
