adjust the email icon

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                   type="text"
                 />
                 <i
-                  class="fa-solid fa-circle-chevron-right text-orange-600 h-7 w-7"
+                  class="fa-solid fa-circle-chevron-right text-orange-600 text-3xl"
                 ></i>
               </div>
               <div class="flex justify-between w-2/5 my-8">
